terraform/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: pythonapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-svc
            port:
              number: 80
